--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 body {
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
-  background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
+  background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
