--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,23 +1,40 @@
-.form {
+.form-container {
   width: fit-content;
+  margin: 0 auto;
 }
 
-@media screen and (max-width: 400px) {
-  .small-window {
-    padding: 1rem;
-  }
+.form {
+  width: 90%;
+}
 
+.form-btn {
+  width: fit-content;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  margin-left: 0;
+}
+
+.form-input {
+  width: 100%;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  margin-right: 0;
+  border-right: none;
+}
+
+@media screen and (max-width: 510px) {
   .form {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: fit-content;
-    padding: 1rem;
   }
-  .form > .small-input {
+  .form > .form-input {
     width: max-content;
+    border-radius: 0.5rem;
   }
-  .form > .small-btn {
+  .form > .form-btn {
     width: fit-content;
+    border-radius: 0.5rem;
   }
 }
