--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -2,4 +2,17 @@
   width: 150px;
   height: 150px;
   background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
+  color: #000000;
+}
+
+.parallax-effect-img {
+  transform-style: preserve-3d;
+}
+
+.inner-element {
+  transform: translateZ(40px);
+}
+
+img {
+  -webkit-user-drag: none;
 }
