--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -7,6 +7,11 @@
   width: 90%;
 }
 
+.form-btn,
+.form-input {
+  border: solid black 0.1rem;
+}
+
 .form-btn {
   width: fit-content;
   border-top-right-radius: 0.5rem;
@@ -31,7 +36,9 @@
   }
   .form > .form-input {
     width: max-content;
+    border: solid black 0.1rem;
     border-radius: 0.5rem;
+    margin-bottom: 1rem;
   }
   .form > .form-btn {
     width: fit-content;
