--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -14,15 +14,15 @@
 
 .form-btn {
   width: fit-content;
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
   margin-left: 0;
 }
 
 .form-input {
   width: 100%;
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
   margin-right: 0;
   border-right: none;
 }
@@ -37,11 +37,11 @@
   .form > .form-input {
     width: max-content;
     border: solid black 0.1rem;
-    border-radius: 0.5rem;
-    margin-bottom: 1rem;
+    border-radius: 8px;
+    margin-bottom: 1em;
   }
   .form > .form-btn {
     width: fit-content;
-    border-radius: 0.5rem;
+    border-radius: 8px;
   }
 }
